suite wpf + context modifié

--- a/Console/App.config
+++ b/Console/App.config
@@ -18,11 +18,9 @@
     </providers>
   </entityFramework>
 
-
   <connectionStrings>
     <add name="ConnexionString"
-         connectionString='Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename="c:\Users\ravel\OneDrive\Documents\Visual Studio 2017\Projects\FindYourJob.Ravel.Pereira\ModelDonnees\Database.mdf";Integrated Security=True' providerName="System.Data.SqlClient" />
+         connectionString='Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename="C:\Users\ravel\Documents\Projet C#\FindYourJob.Ravel.Pereira\ModelDonnees\Database.mdf";Integrated Security=True' providerName="System.Data.SqlClient" />
   </connectionStrings>
-
 
 </configuration>
