--- a/WPF/App.config
+++ b/WPF/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="ConnexionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;c:\Users\ravel\OneDrive\Documents\Visual Studio 2017\Projects\FindYourJob.Ravel.Pereira\ModelDonnees\Database.mdf&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ConnexionString" connectionString='Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename="C:\Users\ravel\Documents\Projet C#\FindYourJob.Ravel.Pereira\ModelDonnees\Database.mdf";Integrated Security=True' providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
