--- a/AppWeb/Web.config
+++ b/AppWeb/Web.config
@@ -68,6 +68,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ConnexionString" connectionString='Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename="C:\Users\ravel\Documents\Projet C#\FindYourJob.Ravel.Pereira\ModelDonnees\Database.mdf";Integrated Security=True' providerName="System.Data.SqlClient" />
+    <add name="ConnexionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;C:\Users\ravel\Documents\Projet C#\FindYourJob.Ravel.Pereira\ModelDonnees\Database.mdf&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
